// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderImage not pixelated renders correctly 1`] = `
<div
  className="header-image"
>
  <img
    className="header-image__img "
    src="image.jpg"
  />
  <span
    className="header-image__caption"
  >
    This is a caption
  </span>
</div>
`;

exports[`HeaderImage pixelated renders correctly 1`] = `
<div
  className="header-image"
>
  <img
    className="header-image__img header-image__img--pixelate"
    src="image.jpg"
  />
  <span
    className="header-image__caption"
  >
    This is a caption
  </span>
</div>
`;
